--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(TCP_server_for_DBMS)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(TCP_server_for_DBMS main.cpp ProxyServer/ProxyServer.cpp ProxyServer/ProxyServer.h Client/Client.cpp Client/Client.h DataChunks/DataChunks.cpp DataChunks/DataChunks.h DBconnecter/DbConnecter.cpp DBconnecter/DbConnecter.h)
+add_executable(TCP_server_for_DBMS main.cpp ProxyServer/ProxyServer.cpp ProxyServer/ProxyServer.h Client/Client.cpp Client/Client.h DataChunks/DataChunks.cpp DataChunks/DataChunks.h DbConnector/DbConnector.cpp DbConnector/DbConnector.h)
